# agent-evaluation

./: .gitignore  README.md  evaluation_results.json  main.py  pyproject.toml
cases/agent_cases/: database_search.json
cases/mcp_cases/: config.json
cases/mcp_cases/bohrium_public_agent/: cases.json  prompt.py
cases/mcp_cases/mofdb_agent/: cases.json  prompt.py
cases/mcp_cases/openlam_agent/: cases.json  prompt.py
cases/mcp_cases/optimade_agent/: cases.json  prompt.py
docs/: eva.json  evaluation.md  plan.md  thoughts.md
src/agent_evaluator/: constant.py  launcher.py  utils.py
src/agent_evaluator/base/: config.yaml  evaluation.py  human_simulator.py  promptfoo_provider.py  runner.py
src/agent_evaluator/metric/: multi_options_quality.py  transfer_or_answer_quality.py  transfer_to_agent_quality.py
src/mcp_evaluator/: cli.py
src/mcp_evaluator/core/: __init__.py  mcp.py  oracle.py  policy.py
src/mcp_evaluator/models/: __init__.py  schemas.py
src/mcp_evaluator/utils/: __init__.py  report.py  suite.py
